Fix layout issue with footer in ie11

--- a/src/styles/components/CheckoutPage.less
+++ b/src/styles/components/CheckoutPage.less
@@ -80,4 +80,9 @@
   .CheckoutPage__row {
     flex-direction: column;
   }
+
+  .CheckoutPage .CheckoutForm, .CheckoutPage .CheckoutPage__summary-container {
+    /* Fix problem with IE11 layout */
+    flex: auto;
+  }
 }
